<resources>
    <string name="app_name">Matcheduc</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match">Match</string>
    <string name="perfil">Perfil</string>
    <string name="salvar">Salvar</string>
    <string name="nome_da_disciplina">Nome da disciplina</string>
    <string name="nome_do_tema">Nome do tema</string>
    <string name="entrar">Entrar</string>
    <string name="sou_professor">Sou professor</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="ol_bem_vindo_de_volta">Olá! Bem vindo de volta...</string>
    <string name="matcheduc">Matcheduc</string>
    <string name="campo_branco">Campo em branco!</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="relatorio">Relatório</string>
    <string name="alunos">alunos</string>
    <string name="avaliacao">Avaliação</string>
    <string name="tema">Tema</string>
    <string name="informacao">Informação</string>
    <string name="texto_objetiva">Definição: Série de perguntas diretas, para respostas curtas, com apenas uma solução possível. Função: Avaliar quanto o aluno apreendeu sobre dados singulares e específicos do conteúdo. Vantagens: É familiar às crianças, simples de preparar e de responder e pode abranger grande parte do exposto em sala de aula. Atenção: Pode ser respondida ao acaso ou de memória e sua análise não permite constatar quanto o aluno adquiriu de conhecimento. Planejamento: Selecione os conteúdos para elaborar as questões e faça as chaves de correção. Elabore as instruções sobre a maneira adequada de responder às perguntas. Análise: Defina o valor de cada questão e multiplique-o pelo número de respostas corretas. Como utilizar as informações: Veja como cada aluno está em relação à média da classe. Analise os itens que muitos erraram para ver se a questão foi mal formulada ou se é preciso retomar o conteúdo específico.</string>
    <string name="prova_objetiva">PROVA OBJETIVA</string>
    <string name="prova_dissertativa">PROVA DISSERTATIVA</string>
    <string name="text_discursiva">Definição: Série de perguntas que exijam capacidade de estabelecer relações, resumir, analisar e julgar. Função: Verificar a capacidade de analisar o problema central, formular ideias e redigi-las. Vantagens: O aluno tem liberdade para expor os pensamentos, mostrando habilidades de organização, interpretação e expressão. Atenção: Não mede o domínio do conhecimento, cobre uma amostra pequena do conteúdo e não permite amostragem. Planejamento: Elabore poucas questões e dê tempo suficiente para que os alunos possam pensar e sistematizar seus pensamentos. Análise: Defina o valor de cada pergunta e atribua pesos à clareza das ideias, ao poder de argumentação e à conclusão e a apresentação da prova. Como utilizar as informações: Se o desempenho não for satisfatório, crie experiências e novos enfoques que permitam ao aluno chegar à formação dos conceitos mais importantes.</string>
    <string name="seminario">SEMINÁRIO</string>
    <string name="texto_seminario">Definição: Exposição oral para um público, utilizando a fala e materiais de apoio próprios ao tema. Função: Possibilitar a transmissão verbal das informações pesquisadas de forma eficaz. Vantagens: Contribui para a aprendizagem do ouvinte e do expositor, exige pesquisa e organização das informações e desenvolve a oralidade. Atenção: Conheça as características pessoais de cada aluno para saber como apoiá-lo em suas principais dificuldades. Planejamento: Ajude na delimitação do tema, forneça bibliografia, esclareça os procedimentos de apresentação e ensaie com todos os alunos. Análise: Atribua pesos à abertura, ao desenvolvimento do tema, aos materiais utilizados e à conclusão. Estimule a turma a fazer perguntas e opinar. Como utilizar as informações: Caso a apresentação não tenha sido satisfatória, planeje atividades específicas que possam auxiliar no desenvolvimento dos objetivos não atingidos.</string>
    <string name="abordagem_tematica">Abordagem Temática</string>
</resources>
