<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tinder">


    <fragment
        android:id="@+id/navigation_report"
        android:name="powellapps.matcheduc.ui.report.ReportFragment"
        android:label="@string/relatorio"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="powellapps.matcheduc.ui.profile.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_tinder"
        android:name="powellapps.matcheduc.ui.cardstack.TinderFragment"
        android:label="@string/tema"
        tools:layout="@layout/fragment_tinder" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="powellapps.matcheduc.ui.information.InformationFragment"
        android:label="@string/informacao"
        tools:layout="@layout/fragment_information" />
</navigation>
